--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <style>
         body {
             text-align: center;
-            margin-top: 30px;
-            font-family: 'Courier';
-			background-color:#FFF5E4;
+            margin-top: 40px;
+            font-family: 'Monospace';
+			background-color:#FFB7CE;
             color: #FF9494;
         }
         #valentineQuestion {
