--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         body {
             text-align: center;
             margin-top: 40px;
-            font-family: 'Monospace';
-			background-color:#FFB7CE;
-            color: #FF9494;
+            font-family: ui-rounded;
+			background-color:#FFEEFA;
+            color: #CD5E77;
         }
         #valentineQuestion {
             font-size: 50px;
