--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             text-align: center;
             margin-top: 40px;
-            font-family: ui-rounded;
+            font-family: 'ui-rounded';
 			background-color:#FFEEFA;
             color: #CD5E77;
         }
