--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <div id="valentineQuestion"><b>Will you be my valentine?</b></div>
     <button class="answerButton" onclick="location.href='thankyou.html'">Yes</button>
-    <button class="answerButton" id="noButton">I no no wanna o(╥﹏╥)o</button>
+    <button class="answerButton" id="noButton">No (please don't say no o(╥﹏╥)o)</button>
     <br>
     <img src ='rose-cat-give-give-rose-to-cat.gif' alt = 'cat give rose' class="responsive">
 
