--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             margin: 10px;
             font-family: 'courier';
             margin-bottom: 20px;
-            background-color:#FFE3E1;
-            color: #e67373;
+            background-color:#FFB7CE;
+            color: #CD5E77;
             border-radius: 12px;
-            border: 2px solid #FFE3E1;
+            border: 2px solid #FFB7CE;
         }
     </style>
 </head>
