--- a/yes.html
+++ b/yes.html
@@ -9,7 +9,7 @@
             text-align: center;
             margin-top: 40px;
             font-family: 'Courier';
-			      background-color:#FFEEFA;
+		background-color:#FFEEFA;
             color: #CD5E77;
         }
 		#thankyou {
@@ -36,13 +36,13 @@
 <body>
 	<div id="thankyou"><b>Thank you</b></div>
 
-	<img id = "rizz" src = 'rizz.gif' alt = "rizzler god" class="responsive">
+	<img id = "cuddles" src = 'cuddles.png' alt = "cuddle time" class="responsive">
 	<br>
     <audio controls autoplay>
 		<source src="congratulations.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
-	<p>Don't go yet!</p>
+	<p>my pookie<3</p>
 	<button class="button" onclick="location.href='date.html'"> Click me UWU</button>
 </body>
 </html>
