--- a/yes.html
+++ b/yes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank you</title>
+    <title>My pookie</title>
 	<style>
 		body {
             text-align: center;
@@ -12,11 +12,11 @@
 		background-color:#FFEEFA;
             color: #CD5E77;
         }
-		#thankyou {
+		#loveya {
 			font-size: 50px;
 			margin-bottom: 20px;
 		}
-		.rizz {
+		.cuddles {
 			margin-bottom: 10 px;
 		}
 		.button {
@@ -26,23 +26,17 @@
             margin: 10px;
             font-family: 'courier';
             margin-bottom: 20px;
-            background-color:#FFE3E1;
-            color: #e67373;
+            background-color:#FFB7CE;
+            color: #CD5E77;
             border-radius: 12px;
-            border: 2px solid #FFE3E1;
+            border: 2px solid #CD5E77;
         }
 	</style>
 </head>
 <body>
-	<div id="thankyou"><b>Thank you</b></div>
+	<div id="loveya"><b>Love ya my pookie wookie dookie cookie bookie cutie patootie boo boo bear <3<3<3</b></div>
 
 	<img id = "cuddles" src = 'cuddles.png' alt = "cuddle time" class="responsive">
-	<br>
-    <audio controls autoplay>
-		<source src="congratulations.mp3" type="audio/mpeg">
-		Your browser does not support the audio element.
-	</audio>
-	<p>my pookie<3</p>
-	<button class="button" onclick="location.href='date.html'"> Click me UWU</button>
+	<p>Mwah >3<</p>
 </body>
 </html>
