--- a/yes.html
+++ b/yes.html
@@ -19,24 +19,12 @@
 		.cuddles {
 			margin-bottom: 10 px;
 		}
-		.button {
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            margin: 10px;
-            font-family: 'courier';
-            margin-bottom: 20px;
-            background-color:#FFB7CE;
-            color: #CD5E77;
-            border-radius: 12px;
-            border: 2px solid #CD5E77;
-        }
 	</style>
 </head>
 <body>
 	<div id="loveya"><b>Love ya my pookie wookie dookie cookie bookie cutie patootie boo boo bear <3<3<3</b></div>
 
-	<img id = "cuddles" src = 'cuddles.png' alt = "cuddle time" class="responsive">
+	<img id = "cuddles" src = 'cuddles.png' alt = "cuddle time" width="500" height="500" class="responsive">
 	<p>Mwah >3<</p>
 </body>
 </html>
